fixed z-index for topbar

--- a/app/assets/stylesheets/decidim.scss
+++ b/app/assets/stylesheets/decidim.scss
@@ -27,7 +27,8 @@ $primary: $adipgreen;
 
 .top-bar-plaza-publica {
   background-color: #fff !important;
-  filter: drop-shadow(0px 5px 5px $darkiegray);
+  filter: drop-shadow(0px 5px 5px rgba(0,0,0,.5));
+  z-index: 100;
 }
 .logo-wrapper span {
   color: $adipgray !important;
